--- a/lang/en.json
+++ b/lang/en.json
@@ -1,95 +1,96 @@
 {
-	"add_playlist": "Add a playlist",
-	"button_add": "Add",
-	"button_adduser": "Add user",
-	"button_cancel": "Cancel",
-	"button_checkall": "Check all",
-	"button_chpwd": "Change Password",
-	"button_delete": "Delete",
-	"button_fastupload": "Fast upload",
-	"button_login": "Log in",
-	"button_ok": "OK",
-	"button_reload_users": "Reload userlist",
-	"button_save": "Save",
-	"button_uncheckall": "Uncheck all",
-	"confirm_delete_playlist": "Do you want to remove playlist {0}?",
-	"confirm_delete_track": "Do you want to remove this track?",
-	"default_playlist_name": "all tracks",
-	"delete_files_confirm": "Do you want to remove {0} files?",
-	"edit_not_allowed": "You are not allowed to edit/remove songs",
-	"empty": "Empty",
-	"error": "An error occurred.",
-	"error_bad_config": "An error occurred while loading Audy configuration",
-	"error_cannot_remove_self": "You can't remove yourself",
-	"error_empty_playlist_name": "Playlist name is empty",
-	"error_empty_playlist_songs": "No files selected",
-	"error_lang_not_found": "Language file not found",
-	"error_login_already_taken": "This username is already taken by someone",
-	"error_n_songs_already_exists": "{0} files already exists",
-	"error_n_songs_error": "An error occurred while uploading {0} files",
-	"error_new_pass_mismatch": "Repeat new password mismatch",
-	"error_no_files_fastupload": "/fastupload directory is empty",
-	"error_not_allowed": "You don't have permission to do this",
-	"error_parsing_form": "An error occurred while processing data",
-	"error_too_much_playlists": "You've created too much playlists",
-	"error_too_much_tries": "You have made too many log-in attempts",
-	"error_track_not_found": "File not found",
-	"error_user_not_found": "User not found",
-	"error_while_removing_track": "An error occurred while removing file",
-	"error_wrong_data": "Username or password data was incorrect",
-	"error_wrong_old_password": "Wrong old password",
-	"error_wrong_username_or_password": "Username and/or password was incorrect. Please try again",
-	"fastupload_descr": "With this feature you can upload files fast and easily. You just need to put all your files into /fastupload directory with Audy server. Want me to scan this folder?",
-	"file_manager_files": "Files",
-	"file_manager_title": "File manager",
-	"lang_desc": "English",
-	"login": "Username",
-	"login_title": "Login to Audy",
-	"logout": "Log out",
-	"logout_confirm": "Are you sure you want to log out?",
-	"n_files_has_been_deleted": "{0} files removed",
-	"n_files_uploaded": "{0} files uploaded successfully",
-	"n_files_will_be_uploaded": "{0} files will be uploaded of {1}",
-	"no_files_will_be_uploaded": "Files wrong format",
-	"no_lyrics": "No lyrics",
-	"password": "Password",
-	"password_changed": "Password has been changed successfully",
-	"password_resetted": "The new password for user {0} is {1}",
-	"playlist": "Playlist",
-	"playlist_control_toggle_title": "Edit playlist",
-	"playlist_edit_playlist_name": "Playlist name",
-	"playlist_edit_songlist": "Files",
-	"playlist_removed": "Playlist {0} has been removed",
-	"playlist_updated": "Playlist {0} has been updated",
-	"playmode_0": "Listen all songs",
-	"playmode_1": "Repeat one",
-	"playmode_2": "Shuffle",
-	"reset_password": "Reset password",
-	"search": "Search",
-	"search_nothing_found": "Nothing found",
-	"settings": "Settings",
-	"settings_autoplay": "Autoplay",
-	"settings_iplogging": "IP Logging",
-	"settings_lang_change": "Language",
-	"settings_new_pass": "New password",
-	"settings_new_pass_2": "Repeat new password",
-	"settings_old_pass": "Old password",
-	"settings_saved": "Changes saved",
-	"settings_session_time": "Session time(hours)",
-	"settings_title_trackname": "Track name in title",
-	"th_actions": "Actions",
-	"track_edit_lyrics": "Lyrics",
-	"track_edit_track_name": "Name",
-	"track_edited": "Song info has been updated",
-	"track_has_been_removed": "Song has been removed",
-	"upload": "Upload files to Audy",
-	"upload_finish": "Upload finished",
-	"upload_not_allowed": "You are not allowed to upload files",
-	"uploading_busy": "Other upload is processing. Please wait...",
-	"uploading_progress": "Uploading {0} files",
-	"user_added": "User {0} has been successfully added",
-	"user_removed": "User {0} has been successfully removed",
-	"users_list_title": "Users control",
-	"welcome": "Welcome to Audy!",
-	"with_files": "With selected"
+  "add_playlist": "Add a playlist",
+  "button_add": "Add",
+  "button_adduser": "Add user",
+  "button_cancel": "Cancel",
+  "button_checkall": "Check all",
+  "button_chpwd": "Change Password",
+  "button_delete": "Delete",
+  "button_fastupload": "Fast upload",
+  "button_login": "Log in",
+  "button_ok": "OK",
+  "button_reload_users": "Reload userlist",
+  "button_save": "Save",
+  "button_uncheckall": "Uncheck all",
+  "confirm_delete_playlist": "Do you want to remove playlist {0}?",
+  "confirm_delete_track": "Do you want to remove this track?",
+  "default_playlist_name": "all tracks",
+  "delete_files_confirm": "Do you want to remove {0} files?",
+  "edit_not_allowed": "You are not allowed to edit/remove songs",
+  "empty": "Empty",
+  "error": "An error occurred.",
+  "error_bad_config": "An error occurred while loading Audy configuration",
+  "error_cannot_remove_self": "You can't remove yourself",
+  "error_empty_playlist_name": "Playlist name is empty",
+  "error_empty_playlist_songs": "No files selected",
+  "error_lang_not_found": "Language file not found",
+  "error_login_already_taken": "This username is already taken by someone",
+  "error_n_songs_already_exists": "{0} files already exists",
+  "error_n_songs_error": "An error occurred while uploading {0} files",
+  "error_new_pass_mismatch": "Repeat new password mismatch",
+  "error_no_files_fastupload": "/fastupload directory is empty",
+  "error_not_allowed": "You don't have permission to do this",
+  "error_parsing_form": "An error occurred while processing data",
+  "error_too_much_playlists": "You've created too much playlists",
+  "error_too_much_tries": "You have made too many log-in attempts",
+  "error_track_not_found": "File not found",
+  "error_unable_to_load_track": "Unable to load track data",
+  "error_user_not_found": "User not found",
+  "error_while_removing_track": "An error occurred while removing file",
+  "error_wrong_data": "Username or password data was incorrect",
+  "error_wrong_old_password": "Wrong old password",
+  "error_wrong_username_or_password": "Username and/or password was incorrect. Please try again",
+  "fastupload_descr": "With this feature you can upload files fast and easily. You just need to put all your files into /fastupload directory with Audy server. Want me to scan this folder?",
+  "file_manager_files": "Files",
+  "file_manager_title": "File manager",
+  "lang_desc": "English",
+  "login": "Username",
+  "login_title": "Login to Audy",
+  "logout": "Log out",
+  "logout_confirm": "Are you sure you want to log out?",
+  "n_files_has_been_deleted": "{0} files removed",
+  "n_files_uploaded": "{0} files uploaded successfully",
+  "n_files_will_be_uploaded": "{0} files will be uploaded of {1}",
+  "no_files_will_be_uploaded": "Files wrong format",
+  "no_lyrics": "No lyrics",
+  "password": "Password",
+  "password_changed": "Password has been changed successfully",
+  "password_resetted": "The new password for user {0} is {1}",
+  "playlist": "Playlist",
+  "playlist_control_toggle_title": "Edit playlist",
+  "playlist_edit_playlist_name": "Playlist name",
+  "playlist_edit_songlist": "Files",
+  "playlist_removed": "Playlist {0} has been removed",
+  "playlist_updated": "Playlist {0} has been updated",
+  "playmode_0": "Listen all songs",
+  "playmode_1": "Repeat one",
+  "playmode_2": "Shuffle",
+  "reset_password": "Reset password",
+  "search": "Search",
+  "search_nothing_found": "Nothing found",
+  "settings": "Settings",
+  "settings_autoplay": "Autoplay",
+  "settings_iplogging": "IP Logging",
+  "settings_lang_change": "Language",
+  "settings_new_pass": "New password",
+  "settings_new_pass_2": "Repeat new password",
+  "settings_old_pass": "Old password",
+  "settings_saved": "Changes saved",
+  "settings_session_time": "Session time(hours)",
+  "settings_title_trackname": "Track name in title",
+  "th_actions": "Actions",
+  "track_edit_lyrics": "Lyrics",
+  "track_edit_track_name": "Name",
+  "track_edited": "Song info has been updated",
+  "track_has_been_removed": "Song has been removed",
+  "upload": "Upload files to Audy",
+  "upload_finish": "Upload finished",
+  "upload_not_allowed": "You are not allowed to upload files",
+  "uploading_busy": "Other upload is processing. Please wait...",
+  "uploading_progress": "Uploading {0} files",
+  "user_added": "User {0} has been successfully added",
+  "user_removed": "User {0} has been successfully removed",
+  "users_list_title": "Users control",
+  "welcome": "Welcome to Audy!",
+  "with_files": "With selected"
 }
